lintian (2.5.55) UNRELEASED; urgency=medium

  "XXX: generate tag summary"

  * checks/{files,manpages}.{desc,pm}:
    + [NT] Stop treating usr/man and usr/X11R6/man as manpage directories
      to simplify some code paths.  Nothing ships manpages in these
      directories and lintian emits tags to strongly discourage people
      from doing so.
  * checks/init.d.pm:
    + [CL] Avoid warning for init.d-script-not-marked-as-conffile when
      the init.d script does not exist; we will already be alerted via
      the init.d-script-not-included-in-package error.
  * checks/python.pm:
    + [CL] Move to "Type: source, binary" check type.
    + [CL] Also match packages named "python2-*" as relating to Python 2.x.
    + [CL] Warn about Django libraries that do not depend on Django itself.
      (Closes: #877292)
    + [CL] Do not emit python-foo-but-no-python3-foo for -common packages.
  * checks/scripts.desc:
    + [CL] Add missing example-script-uses-deprecated-nodejs-location tag.
      (Closes: #877142)
    + [NT] Apply patch from Mattia Rizzolo to improve the tag description
      for script-uses-deprecated-nodejs-location.
  * checks/watch-file.{pm,desc}:
    + [CL] Warn for debian/watch files using insecure URIs such as HTTP or
      FTP, similar to vcs-field-uses-insecure-uri.  (Closes: #849515)

  * data/fields/essential:
    + [MR] Remove 'mount' from the essential packages.  Starting with
      util-linux version 2.29.2-3 the Essential flag has been removed.
      (Closes: #877511)

  * commands/lintian.pm:
    + [NT] Simplify handling of uncaught exceptions.

  * lib/Lintian/Util.pm:
    + [NT] Rename the "fail" subroutine to "internal_error" to better
      reflect its purpose.

  * t/tests/python-new-python2-package/*:
    + [CL] Correct Depends of python2.7 → python3 in Python 3 test
      package.
  * t/tests/python-python2-no-python3-unrel/debian/debian/control.in:
    + [CL] Add test for ignoring python-foo-doc packages.