@@ -400,9 +400,3 @@ Info: The copyright file has lines ending in CRLF instead of just LF.
  <tt>CR</tt> character in the file:
  .
  <tt>sed -i 's/\r//g' path/to/file</tt>
-
-Tag: copyright-year-in-future
-Severity: normal
-Certainty: certain
-Info: The copyright file refers to a year that is greater than the last entry
- in <tt>debian/changelog</tt>. Usually this is a typo.
