@@ -1,44 +1,0 @@
-Format: http://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
-Upstream-Name: lintian
-Upstream-Contact: Lintian Maintainers <debian-lint-maint@lists.debian.org>
-Source: http://git.debian.org/?p=lintian/lintian.git
-
-Files: *
-Copyright:
- 2000 Lintian Maintainers <debian-lint-maint@lists.debian.org>
- 2100 Lintian Maintainers <debian-lint-maint@lists.debian.org>
- 2101, 2102 Lintian Maintainers <debian-lint-maint@lists.debian.org>
- 2103-2104 Lintian Maintainers <debian-lint-maint@lists.debian.org>
- 2000 Lintian Maintainers (http://debian.org:2200)
- 2000 Lintian Maintainers <2201.rransom.2202@2203.debian.org>
- 2000 ISO 2203-2 & ISO-2204 LLC. (2008)
- 2000 Lintian Maintainers, Immensee, CH-2205, Switzerland.
- 2000 Sun Microsystems, Inc., 4150 Network Circle, Santa Clara, California 95054, U.S.A.
- 2112 D. Original Author.
- 2000 Lintian Maintainers <http://example.com/4200/LICENSE>
- 2000 Clause 252.227-7013 (c) (1) of DFARs.
-License: MIT
- Redistribution and use in source and binary forms, with or without
- modification, are permitted provided that the following conditions
- are met:
- .
- 1. Redistributions of source code must retain the above copyright
-    notice, this list of conditions and the following disclaimer.
- 2. Redistributions in binary form must reproduce the above copyright
-    notice, this list of conditions and the following disclaimer in the
-    documentation and/or other materials provided with the distribution.
- 3. Neither the name of the University nor the names of its contributors
-    may be used to endorse or promote products derived from this software
-    without specific prior written permission.
- .
- THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
- ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
- ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
- FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
- DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
- OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
- HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
- LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
- OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
- SUCH DAMAGE.
