@@ -1,6 +1,0 @@
-Testname: copyright-file-year-in-future
-Version: 1.0
-Description: Test for "future" years in debian/copyright
-Test-For:
- copyright-year-in-future
- timewarp-standards-version
