@@ -3,4 +3,3 @@ Version: 1.0
 Description: Test newer standards version with unreleased old changelog date
 Test-Against:
  timewarp-standards-version
- copyright-year-in-future
