@@ -2,4 +2,3 @@ Testname: standards-version-timewarp
 Version: 1.0
 Description: Test newer standards version with old changelog date
 Test-For: timewarp-standards-version
-Test-Against: copyright-year-in-future
